Fix 64-bit store to int JNIHandleBlock::_top

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b10
    • x86

        JNIHandleBlock::_top is an int field. The native entry stores
        0 into this field using a pointer store. On 64-bit platforms
        this can cause errors.

        This change adapts the corresponding store on sparc
        and both x86 variants.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: