8039146: Fix 64-bit store to int JNIHandleBlock::_top

Reviewed-by: coleenp, kvn